@@ -1,6 +1,6 @@
 <div class="card mb-4" id="id">
   <div class="card-img-wrapper">
-    <img src="{{user.photoUrl}}" alt="{{user.knownAs}}" class="card-img-top"> 
+    <img src="{{user.photoUrl || '../../../assets/user.png'}}" alt="{{user.knownAs}}" class="card-img-top"> 
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item"><button class="btn btn-primary" [routerLink]="['/members/', user.id]"  ><i class="fa fa-user"></i></button></li>
       <li class="list-inline-item"><button class="btn btn-primary"><i class="fa fa-heart"></i></button></li>
