@@ -6,8 +6,8 @@
 
     <div class="col-sm-4">
       <!-- general info -->
-      <div class="card">
-        <img class="card-img-top img-thumbnail" src="{{user.photoUrl}}" alt="{{user.knownAs}}">
+      <div class="card">         
+        <img class="card-img-top img-thumbnail" src="{{user.photoUrl || '../../../assets/user.png'}}" alt="{{user.knownAs}}">
       </div>
 
       <div class="card-body">
