@@ -13,7 +13,7 @@
     <div class="col-sm-4">
       <!-- general info -->
       <div class="card">
-        <img class="card-img-top img-thumbnail" [src]="photoUrl" alt="{{user.knownAs}}">
+        <img class="card-img-top img-thumbnail" src="{{photoUrl || '../../../assets/user.png'}}" alt="{{user.knownAs}}">
       </div>
 
       <div class="card-body">
