@@ -18,7 +18,7 @@
     <!-- <div *ngIf="logg edIn()" class="dropdown" dropdown (onShown)="onShown($event)" (onHidden)="onHidden($event)" (isOpenChange)="isOpenChange($event)"> -->
     <div *ngIf="loggedIn()" class="dropdown" dropdown>
         <span class="mr-1" >
-            <img [src]="photoUrl" class="" alt="">
+            <img src="{{photoUrl || '../../assets/user.png'}}" class="" alt="">
           </span> 
       <a class="dropdown-toggle text-light" dropdownToggle (click)="false">               
         Welcome {{this.authService.decodedToken?.unique_name | titlecase}}
