@@ -1,23 +1,95 @@
-<form #registerForm="ngForm" (ngSubmit) = "register()">
+<!-- <form #registerForm="ngForm" (ngSubmit) = "register()"> -->
+<form [formGroup]="registerForm" for (ngSubmit)="register()">
   <h2 class="text-center text-primary">Sign Up</h2>
   <hr>
+  <div class="form-group">
+    <label class="control-label" style="margin-right:10px">I am a: </label>
+    <label class="radio-inline">
+      <input class="mr-3" type="radio" value="male" formControlName="gender">Male
+    </label>
+    <label class="radio-inline ml-3">
+      <input class="mr-3" type="radio" value="female" formControlName="gender">Female
+    </label>
+  </div>
 
   <div class="form-group">
-    <input type="text" class="form-control" placeholder="Username" name="username" required [(ngModel)]="model.username"> 
+    <!-- <input type="text" class="form-control" placeholder="Username" formControlName="username" required [(ngModel)]="model.username"> -->
+    <input type="text" [ngClass]="{'is-invalid' : registerForm.get('username').errors 
+                && registerForm.get('username').touched}"
+      class="form-control" placeholder="Username" formControlName="username">
+    <div class="invalid-feedback"> Please choose a Username
+    </div>
   </div>
-  
+
   <div class="form-group">
-      <input type="password" class="form-control" placeholder="Password" name="password" required [(ngModel)]="model.password"> 
+    <input [ngClass]="{'is-invalid': registerForm.get('knownAs').errors && registerForm.get('knownAs').touched}" class="form-control"
+      placeholder="Known as" formControlName="knownAs">
+    <div class="invalid-feedback" *ngIf="registerForm.get('knownAs').touched && registerForm.get('knownAs').hasError('required')">Known
+      as is required</div>
   </div>
+
+  <div class="form-group">
+    <input [ngClass]="{'is-invalid': registerForm.get('dateOfBirth').errors && registerForm.get('dateOfBirth').touched}"
+      class="form-control" placeholder="Date of Birth" formControlName="dateOfBirth" type="text" 
+      [bsConfig]="bsConfig"   [minDate]="minDate" [maxDate]="maxDate"
+      bsDatepicker>
+         <!-- [minDate]="minDate" [maxDate]="maxDate" -->
+    <div class="invalid-feedback" *ngIf="registerForm.get('dateOfBirth').touched && registerForm.get('dateOfBirth').hasError('required')">Date
+      of Birth is required</div>
+  </div>
+
+  <div class="form-group">
+    <input [ngClass]="{'is-invalid': registerForm.get('city').errors && registerForm.get('city').touched}" class="form-control"
+      placeholder="City" formControlName="city">
+    <div class="invalid-feedback" *ngIf="registerForm.get('city').touched && registerForm.get('city').hasError('required')">City
+      is required</div>
+  </div>
+
+  <div class="form-group">
+    <input [ngClass]="{'is-invalid': registerForm.get('country').errors && registerForm.get('country').touched}" class="form-control"
+      placeholder="Country" formControlName="country">
+    <div class="invalid-feedback" *ngIf="registerForm.get('country').touched && registerForm.get('country').hasError('required')">Country
+      is required</div>
+  </div>
+
+
+  <div class="form-group">
+    <!-- <input type="password" class="form-control" placeholder="Password" name="password" required [(ngModel)]="model.password"> -->
+    <input type="password" [ngClass]="{'is-invalid' : (registerForm.get('password').errors && registerForm.get('password').touched)
+                || (registerForm.get('password').touched && registerForm.hasError('mismatch'))} "
+      class="form-control" placeholder="Password" formControlName="password">
+    <div class="invalid-feedback" *ngIf="registerForm.get('password').hasError('required')">
+      Password is required
+    </div>
+    <div class="invalid-feedback" *ngIf="registerForm.get('password').hasError('minlength') ">
+      Password must have a least 4 characters
+    </div>
+    <div class="invalid-feedback" *ngIf="registerForm.get('password').hasError('maxlength')">
+      Password exceed 8 characters
+    </div>
+  </div>
+  <div class="form-group">
+    <input type="password" [ngClass]="{'is-invalid' : (registerForm.get('confirmPassword').errors && registerForm.get('password').touched)
+    || (registerForm.get('confirmPassword').touched && registerForm.hasError('mismatch'))}"
+      class="form-control" placeholder="Confirm Password" formControlName="confirmPassword">
+    <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword').hasError('required')">
+      Confirm Password is required
+    </div>
+    <div class="invalid-feedback" *ngIf="registerForm.hasError('mismatch') && registerForm.get('confirmPassword').touched">
+      Password must match!
+    </div>
+  </div>
+
   <!-- <div class="form-group">
       <select name="select" id="select"  class="form-control">
         <option *ngFor="let value of valuesFromHome" [value]="value.id">{{value.id}}-{{value.name}}</option>
       </select> 
   </div> -->
 
-
   <div class="form-group text-center">
     <button class="btn btn-success" type="submit" [disabled]="!registerForm.valid">Register</button>
-    <button class="btn btn-default" type="button" (click)="cancel()" >Cancel</button>
-  </div>  
+    <button class="btn btn-default" type="button" (click)="cancel()">Cancel</button>
+  </div>
 </form>
+<!-- <p>{{registerForm.value |json }}</p>
+<p>{{registerForm.status |json }}</p> -->
