@@ -37,7 +37,7 @@ namespace DatingApp.API.Controllers
         }
        
         // [AllowAnonymous]
-        [HttpGet("{id}")]
+        [HttpGet("{id}", Name="GetUser")]
         public async Task<IActionResult> GetUser(int id)
         {            
             var user = await _repo.GetUser(id);  
