@@ -1,3 +1,4 @@
+using System;
 using System.ComponentModel.DataAnnotations;
 
 namespace DatingApp.API.Dtos
@@ -7,7 +8,25 @@ namespace DatingApp.API.Dtos
         [Required]
         public string username { get; set; }
         [Required]
-        [StringLength(8, MinimumLength=4, ErrorMessage="You must specified a password between 4 and 8 characters")]
+        [StringLength(8, MinimumLength = 4, ErrorMessage = "You must specified a password between 4 and 8 characters")]
         public string password { get; set; }
+        [Required]
+        public string gender { get; set; }
+        [Required]
+        public string knownAs { get; set; }
+        [Required]
+        public DateTime dateOfBirth { get; set; }
+        [Required]
+        public string city { get; set; }
+        [Required]
+        public string country { get; set; }
+        public DateTime created { get; set; }
+        public DateTime lastActive { get; set; }
+        public UserForRegisterDto()
+
+        {
+            created = DateTime.Now;
+            lastActive = DateTime.Now;
+        }
     }
 }
