@@ -22,6 +22,7 @@ namespace DatingApp.API.Helpers
             CreateMap<UserForUpdateDto, User>();
             CreateMap<Photo,PhotoForReturnDto>(); 
             CreateMap<PhotoForCreationDto,Photo>(); 
+            CreateMap<UserForRegisterDto,User>(); 
         }
     }
 }
